[package]
name = "internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memlib = "0.1"
windows = { version = "0.43.0", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading"] }
winutil = { git = "https://github.com/rmccrystal/winutil" }