[package]
name = "memflow-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "0.2.0-beta7"
memflow-win32 = "0.2.0-beta7"
anyhow = "1.0.58"
log = "0.4.17"

memlib = { version = "0.1.0", features = ["kernel"] }