[package]
name = "memlib-usermode"
version = "0.1.0"
edition = "2021"

[dependencies]
memlib = "0.1.0"
windows = { version = "0.41.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Diagnostics_Debug", "Win32_System_Threading"] }
winutil = { git = "https://github.com/rmccrystal/winutil" }