[package]
name = "usermode"
version = "0.1.0"
edition = "2021"

[dependencies]
memlib = "0.1"
#memlib = { git = "https://github.com/rmccrystal/memlib-rs" }
windows = { version = "0.42.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_Memory", "Win32_Security"] }
winutil = { git = "https://github.com/rmccrystal/winutil" }
log = "0.4"
